package renard.remi.ping.ui.utils

object TestTags {

    const val NOT_IMPLEMENTED = "NOT_IMPLEMENTED"

    const val LOGIN_SCREEN_WELCOME = "LOGIN_SCREEN_WELCOME"
    const val LOGIN_SCREEN_APP_NAME = "LOGIN_SCREEN_APP_NAME"
    const val LOGIN_SCREEN_FORM_TITLE = "LOGIN_SCREEN_FORM_TITLE"
    const val LOGIN_SCREEN_FORM_USERNAME = "LOGIN_SCREEN_FORM_USERNAME"
    const val LOGIN_SCREEN_FORM_USERNAME_ERROR = "LOGIN_SCREEN_FORM_USERNAME_ERROR"
    const val LOGIN_SCREEN_FORM_PASSWORD = "LOGIN_SCREEN_FORM_PASSWORD"
    const val LOGIN_SCREEN_FORM_PASSWORD_ERROR = "LOGIN_SCREEN_FORM_PASSWORD_ERROR"
    const val LOGIN_SCREEN_FORM_BUTTON = "LOGIN_SCREEN_FORM_BUTTON"
    const val LOGIN_SCREEN_GO_TO_REGISTER = "LOGIN_SCREEN_GO_TO_REGISTER"
}